Ninja_Gold_2.0/Shell.txt
Jesses-MacBook-Pro:ninja_app jesse$ python /Users/jesse/code/front_end/Django/apps/Ninja_Gold_2.0/ninja_gold/manage.py makemigrations
Migrations for 'ninja_app':
  /Users/jesse/code/front_end/Django/apps/Ninja_Gold_2.0/ninja_gold/apps/ninja_app/migrations/0001_initial.py
    - Create model Dojo
    - Create model Ninja
Jesses-MacBook-Pro:ninja_app jesse$ python /Users/jesse/code/front_end/Django/apps/Ninja_Gold_2.0/ninja_gold/manage.py migrate
Operations to perform:
  Apply all migrations: admin, auth, contenttypes, ninja_app, sessions
Running migrations:
  Applying ninja_app.0001_initial... OK
Jesses-MacBook-Pro:ninja_app jesse$ python /Users/jesse/code/front_end/Django/apps/Ninja_Gold_2.0/ninja_gold/manage.py shell
Python 2.7.15 (default, Jul 23 2018, 21:31:33) 
[GCC 4.2.1 Compatible Apple LLVM 9.0.0 (clang-900.0.39.2)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> Dojo.objects.create(name= "CodingDojo Silicon Valley", city = "Mountain View", state = "CA")
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'Dojo' is not defined
>>> Dojo.objects.first()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'Dojo' is not defined
>>> from apps.ninja_app.models import *
>>> Dojo.objects.create(name= "CodingDojo Silicon Valley", city = "Mountain View", state = "CA")
<Dojo: Dojo object>
>>> Dojo.objects.create(name= "CodingDojo Seattle", city = "Seattle", state = "WA")
<Dojo: Dojo object>
>>> Dojo.objects.create(name= "CodingDojo New York", city = "New York", state = "NY")
<Dojo: Dojo object>
>>> Dojo.objects.get(id = 1).delete()
(1, {u'ninja_app.Ninja': 0, u'ninja_app.Dojo': 1})
>>> Dojo.objects.create(name= "CodingDojo Beijing", city = "Beijing", state="BJ")
<Dojo: Dojo object>
>>> Ninja.objects.create(dojo = Dojo.objects.get(id=0),first_name = "Jesse", last_name = "chen")
Traceback (most recent call last):
  File "<console>", line 1, in <module>
  File "/usr/local/lib/python2.7/site-packages/django/db/models/manager.py", line 85, in manager_method
    return getattr(self.get_queryset(), name)(*args, **kwargs)
  File "/usr/local/lib/python2.7/site-packages/django/db/models/query.py", line 380, in get
    self.model._meta.object_name
DoesNotExist: Dojo matching query does not exist.
>>> this_dojo = Dojo.objects.first()
>>> Ninja.objects.create(dojo=this_dojo, first_name = "Jesse", last_name = "Chen")
<Ninja: Ninja object>
>>> Ninja.objects.create(dojo=this_dojo,first_name = "Jesse2", last_name = "Chen2")
<Ninja: Ninja object>
>>> Ninja.objects.create(dojo=this_dojo,first_name = "Jesse3", last_name = "Chen3")
<Ninja: Ninja object>
>>> this_dojo = Dojo.objects.get(id=2)
>>> Ninja.objects.create(dojo=this_dojo, first_name = "Jesse", last_name = "Chen")
<Ninja: Ninja object>
>>> Ninja.objects.create(dojo=this_dojo,first_name = "Jesse2", last_name = "Chen2")
<Ninja: Ninja object>
>>> Ninja.objects.create(dojo=this_dojo,first_name = "Jesse3", last_name = "Chen3")
<Ninja: Ninja object>
>>> Ninja.objects.filter(dojo = Dojo.objects.first())
<QuerySet [<Ninja: Ninja object>, <Ninja: Ninja object>, <Ninja: Ninja object>, <Ninja: Ninja object>, <Ninja: Ninja object>, <Ninja: Ninja object>]>
>>> Dojo.objects.first().id
2
>>> exit()
Jesses-MacBook-Pro:ninja_app jesse$ python /Users/jesse/code/front_end/Django/apps/Ninja_Gold_2.0/ninja_gold/manage.py makemigrations
You are trying to add a non-nullable field 'desc' to dojo without a default; we can't do that (the database needs something to populate existing rows).
Please select a fix:
 1) Provide a one-off default now (will be set on all existing rows with a null value for this column)
 2) Quit, and let me add a default in models.py
Select an option: 2
Jesses-MacBook-Pro:ninja_app jesse$ python /Users/jesse/code/front_end/Django/apps/Ninja_Gold_2.0/ninja_gold/manage.py makemigrations
Migrations for 'ninja_app':
  /Users/jesse/code/front_end/Django/apps/Ninja_Gold_2.0/ninja_gold/apps/ninja_app/migrations/0002_dojo_desc.py
    - Add field desc to dojo
Jesses-MacBook-Pro:ninja_app jesse$ python /Users/jesse/code/front_end/Django/apps/Ninja_Gold_2.0/ninja_gold/manage.py migrate
Operations to perform:
  Apply all migrations: admin, auth, contenttypes, ninja_app, sessions
Running migrations:
  Applying ninja_app.0002_dojo_desc... OK
Jesses-MacBook-Pro:ninja_app jesse$ Dojo.objects.first().desc
-bash: syntax error near unexpected token `.desc'
Jesses-MacBook-Pro:ninja_app jesse$ Dojo.objects.first()
> python /Users/jesse/code/front_end/Django/apps/Ninja_Gold_2.0/ninja_gold/manage.py shell
-bash: syntax error near unexpected token `python'
Jesses-MacBook-Pro:ninja_app jesse$ Dojo.objects.first().desc
-bash: syntax error near unexpected token `.desc'
Jesses-MacBook-Pro:ninja_app jesse$ python /Users/jesse/code/front_end/Django/apps/Ninja_Gold_2.0/ninja_gold/manage.py shell
Python 2.7.15 (default, Jul 23 2018, 21:31:33) 
[GCC 4.2.1 Compatible Apple LLVM 9.0.0 (clang-900.0.39.2)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> Dojo.objects.first().desc
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'Dojo' is not defined
>>> Dojo.objects.first()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'Dojo' is not defined
>>> Ninja.objects.first()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'Ninja' is not defined
>>> exit()
Jesses-MacBook-Pro:ninja_app jesse$ python /Users/jesse/code/front_end/Django/apps/Ninja_Gold_2.0/ninja_gold/manage.py shell
Python 2.7.15 (default, Jul 23 2018, 21:31:33) 
[GCC 4.2.1 Compatible Apple LLVM 9.0.0 (clang-900.0.39.2)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> import apps.ninja_app.models import *
  File "<console>", line 1
    import apps.ninja_app.models import *
                                      ^
SyntaxError: invalid syntax
>>> from apps.ninja_app.models import *
>>>  Dojo.objects.first().desc
  File "<console>", line 1
    Dojo.objects.first().desc
    ^
IndentationError: unexpected indent
>>> Dojo.objects.first().desc
u'Description'
>>> 